feat(api): implemented wallet deposit for agencies
